cmake_minimum_required(VERSION 2.8)
project( project )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( project project.cpp )
target_link_libraries( project ${OpenCV_LIBS} )
add_executable( downsize downsize.cpp )
target_link_libraries( downsize ${OpenCV_LIBS} )
add_executable( video video.cpp )
target_link_libraries( video ${OpenCV_LIBS} )
set(CMAKE_BUILD_TYPE Debug)
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
# SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
# SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")

